sandbox/output
StockProfit.cpp:50:22: error: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Werror,-Wsign-compare]
        if (sell + 1 < prices_.size()) transaction[sell + 1] = COOLDOWN;
            ~~~~~~~~ ^ ~~~~~~~~~~~~~~
1 error generated.
make: *** [test] Error 1
